# OpenSub

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: ARCHITECTURE.md  HANDOFF.md
scripts/: analyze_cursor_trace.py
src/: config.rs  cursor_agent.rs  cursor_proxy.rs  main.rs
src/api/: mod.rs  models.rs
src/auth/: callback.rs  mod.rs  oauth.rs  store.rs
src/codex/: client.rs
src/translate/: mod.rs  request.rs  stream.rs
src/types/: chat.rs  responses.rs
