[package]
name = "opensub"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Selective Cursor proxy and OpenAI-compatible bridge for the ChatGPT Codex backend"
license = "MIT"
repository = "https://github.com/lorenzovborges/OpenSub"
homepage = "https://github.com/lorenzovborges/OpenSub"
readme = "README.md"
keywords = ["cursor", "openai", "codex", "proxy", "chatgpt"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tokio-stream = "0.1"

# HTTP server + client
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
bytes = "1"
rcgen = "0.14"
flate2 = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PKCE / state / JWT parsing
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"

# URL form-encoding + browser
url = "2"
urlencoding = "2"
webbrowser = "1"

# Errors + CLI
anyhow = "1"
thiserror = "2"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
